# trading-script-anatomy

./: .env.example  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
archive/: 国九条多因子微盘策略.py
examples/: check_alpaca.py  check_fmp.py  demo_backtest.py
src/trading_script_anatomy/: __init__.py  config.py  engine.py  env.py  portfolio.py  values.py
src/trading_script_anatomy/backtest/: __init__.py  simulator.py
src/trading_script_anatomy/broker/: __init__.py  alpaca.py  memory.py  models.py  protocols.py
src/trading_script_anatomy/data/: __init__.py  fmp_provider.py  models.py  protocols.py  universe.py  yfinance_provider.py
src/trading_script_anatomy/strategy/: __init__.py  cn_filters.py  risk.py  selection.py  state.py  us_filters.py
tests/: __init__.py  fakes.py  test_alpaca_broker.py  test_backtest.py  test_broker.py  test_cn_filters.py  test_config.py  test_engine.py  test_env.py  test_fmp_provider.py  test_risk.py  test_selection.py  test_us_filters.py  test_values.py  test_yfinance_provider.py
