[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-script-anatomy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trading_script_anatomy"]
